syntax = "proto3";

package ai.sentient.experiment;

import "google/protobuf/timestamp.proto";

message InputLayer {
  string name = 1;
  enum Type {
    Unknown = 0;
    Enumeration = 1;
    Time = 2;
    Raw = 3;
  }
  Type type = 2;
  repeated string values = 3;
}

message OutputLayer {
  string name = 1;
  enum Type {
    Unknown = 0;
    Enumeration = 1;
    Probability = 2;
    Raw = 3;
  }
  Type type = 2;
  repeated string values = 3;
}

message Experiment {
  string uid = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp created = 4;
  map<uint32, InputLayer> inputLayers = 5;
  map<uint32, OutputLayer> outputLayers = 6;
}

message CreateRequest {
  Experiment experiment = 1;
}

message CreateResponse {
  string uid = 1;
}

message GetRequest {
  string uid = 1;
}

message GetResponse {
  Experiment experiment = 1;
}

message CheckRequest {
}

message CheckResponse {
  repeated string modules = 1;
}

service Service {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc MeshCheck(CheckRequest) returns (CheckResponse);
}
